--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -550,18 +550,21 @@
 		\newcommand{\sumin}{\sum_{i=1}^{n}}
 		\newcommand{\sumkn}{\sum_{k=1}^{n}}
 		\newcommand{\sumjn}{\sum_{j=1}^{n}}
+		\newcommand{\sumik}{\sum_{i-1}^{k}}
 		\newcommand{\sumionf}{\sum_{i=0}^{\infty}}
 		\newcommand{\sumkonf}{\sum_{k=0}^{\infty}}
 		\newcommand{\sumjonf}{\sum_{j=0}^{\infty}}
 		\newcommand{\sumion}{\sum_{i=0}^{n}}
 		\newcommand{\sumkon}{\sum_{k=0}^{n}}
 		\newcommand{\sumjon}{\sum_{j=0}^{n}}
+		\newcommand{\sumiok}{\sum_{i=0}^{k}}
 		\newcommand{\distexp}[1]{\sim\mathsf{Exp}\left(#1\right)}
 		\newcommand{\distnorm}[1]{\sim\mathsf{N}\left(#1\right)}
 		\newcommand{\distbernoulli}[1]{\sim\mathsf{Be}\left(#1\right)}
 		\newcommand{\distunif}[1]{\sim\mathsf{U}\left(#1\right)}
 		\newcommand{\trns}[1]{{#1}^{\scriptscriptstyle\mathsf{T}}}
 		\newcommand{\iid}{\stackrel{\mathrm{iid}}{\sim}}
+		\newcommand{\ift}{\text{if }}
 		\newcommand{\unmezz}{\frac{1}{2}}
 		\newcommand{\sa}{$\sigma$-algebra}	\newcommand{\rv}{random variable}
 		\titleformat{\section}{\color{SkyBlue4}}{\color{red}\thesection}{1em}{}
